fix bug en seccion 4, se borro linea overflow:hidden en css .seccion4

--- a/Entrega4TP/css/style.css
+++ b/Entrega4TP/css/style.css
@@ -405,7 +405,6 @@ body{
     height: 5421px;/*5442px;*/
     display: flex;
     flex-direction: column;
-    overflow: hidden;
 }
 
 .parte-titulo{
